feat: add method to clean old audit in repository
APIM-8867